:construction: be: add institution entity
