# backend/src/domain/entities/Institution.ts
@@ -1,0 +1,6 @@
+export interface Institution {
+  id: string;
+  name: string;
+  createdAt: Date;
+  updatedAt: Date;
+}
