# frontend/src/api/swagger.json
@@ -12,6 +12,32 @@
     }
   ],
   "paths": {
+    "/api/institutions": {
+      "get": {
+        "summary": "Get all institutions",
+        "tags": [
+          "Institutions"
+        ],
+        "responses": {
+          "200": {
+            "description": "List of institutions",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Institution"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
     "/api/notifications": {
       "post": {
         "summary": "Create a new notification",
@@ -345,6 +371,25 @@
   },
   "components": {
     "schemas": {
+      "Institution": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updatedAt": {
+            "type": "string",
+            "format": "date-time"
+          }
+        }
+      },
       "NotificationFile": {
         "type": "object",
         "properties": {
